allprojects {
    repositories {
        mavenCentral()

        if (providers.gradleProperty("useSnapshotRepository").map { it.toBoolean() }.orElse(false).get()) {
            maven {
                name = "SonatypeSnapshots"
                url = uri("https://central.sonatype.com/repository/maven-snapshots/")
            }
        }
    }
}

def detectLwjglNatives = {
    String os = System.getProperty("os.name").toLowerCase(java.util.Locale.ROOT)
    String arch = System.getProperty("os.arch").toLowerCase(java.util.Locale.ROOT)
    boolean arm64 = arch == "aarch64" || arch == "arm64"

    if (os.contains("windows")) {
        return "natives-windows"
    }

    if (os.contains("linux")) {
        return "natives-linux"
    }

    if (os.contains("mac") || os.contains("darwin")) {
        return arm64 ? "natives-macos-arm64" : "natives-macos"
    }

    throw new GradleException("Unsupported OS for LWJGL native selection: ${System.getProperty("os.name")}")
}

ext {
    versions = [
            joml   : providers.gradleProperty("jomlVersion").get(),
            junit  : providers.gradleProperty("junitVersion").get(),
            jansi  : providers.gradleProperty("jansiVersion").get(),
            logback: providers.gradleProperty("logbackVersion").get(),
            lwjgl  : providers.gradleProperty("lwjglVersion").get(),
            slf4j  : providers.gradleProperty("slf4jVersion").get()
    ]
    lwjglNatives = providers.gradleProperty("lwjglNatives").orElse(detectLwjglNatives()).get()
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()

        testLogging {
            events = ["failed"]
            exceptionFormat = "full"
        }
    }
}
